# python_template

./: .coveragerc  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .prospector.yaml  LICENSE  README.md  license.rtf  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: format_check.yml  pre-commit.yml  static_check.yml  unit_test.yml
requirements/: base-py2.txt  base-py3.txt  dev-py2.in  dev-py2.txt  dev-py3.in  dev-py3.txt  test-py2.in  test-py2.txt  test-py3.in  test-py3.txt
src/hello/: __init__.py  hello.py
tests/: test_hello.py
tools/: app_build.py  hello.wxs  installer_build.py  project_directory.py
