[tool.poetry]
authors = ["Ryan Bartling <ryan.bartling@gmail.com>"]
description = "Python application template"
include = ["README.md", "pyproject.toml"]
name = "hello"
readme = "README.md"
repository = "https://github.com/drbartling/python_template"
version = "0.1.0"
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
devtools = "^0.10.0"
pre-commit = "^3.1.1"
pyinstaller = "^5.8.0"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
hello = "hello.hello:main"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
click = "^8.1.3"


[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 80
target-version = ['py310', 'py311']

[tool.isort]
line_length = 80
profile = "black"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
parallel = true
source = ["hello"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--cov-report=term-missing:skip-covered",
    "--cov",
    "--durations=5",
    "--ignore=acceptance_test",
    "--cov-fail-under=100",
]
testpaths = ["tests"]
