[metadata]
name = hello
version = 1.0.0
author = Deca Technologies
description = Provides customized greetings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Deca-Technologies/precipitate/python/tool

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7
; This fills a different role from requirements.txt
; https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
	click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	hello = hello.hello:main

[tool:pytest]
addopts =
    -q
    --cov-report term-missing:skip-covered
    --cov=./
    --durations=5
    --ignore=acceptance_test
